welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: reassignment to val
	if(negative=false) {
                   ^